--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 title: My Home Page
-subtitle: Mostly about my research
+subtitle: Mostly about my research and other things
 ---
 
